samples/_failures_safe/1761703823_89974a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53139b1d.c: In function ‘main’:
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53139b1d.c:152:21: error: expected declaration or statement at end of input
